@@ -2,6 +2,7 @@
 - improved status icons (Olivier Sannier)
 - more robust parsing of catalog headers
 - saving into read-only file now fails as expected
+- fixed saving of gettext keywords with commas in them
 - added more translations:
      Galician (Leandro Regueiro)
      Indonesian (Bayu Artanto)
